--- a/themes/tailbliss/layouts/index.html
+++ b/themes/tailbliss/layouts/index.html
@@ -15,14 +15,7 @@
                     </p>
                 </div>
                 <div class="col-span-6">
-                    {{ $hero := resources.GetMatch "images/pages/tailbliss-rocket-indigo.png" }}
-
-                    {{ $thumb := ($hero.Fill "400x400 webp q90") }}
-                    {{ $large := ($hero.Fill "576x576 webp q90") }}
-
-                    <img srcset="
-                        {{- with $thumb.RelPermalink -}}{{.}} 400w{{- end -}}
-                        {{- with $large.RelPermalink -}}, {{.}} 576w{{- end -}}" src="{{ $hero.RelPermalink }}" width="100%" height="" alt="TailBliss Hero" class="w-full max-w-xl mx-auto rounded-lg" />
+                    <img src="{{ .Site.Params.og_image }}" width="100%" height="" alt="Hero" class="w-full max-w-xl mx-auto rounded-lg" />
                 </div>
             </div>
         </div>
@@ -31,6 +24,7 @@
     <!-- More main page content here... -->
 
     <!-- Our mission section -->
+    {{ if .Site.Params.P1.enabled }}
     <div class="relative my-4">
         <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-cols-2 lg:items-start lg:gap-24 lg:px-8">
             <div class="relative sm:py-8 lg:py-0">
@@ -73,8 +67,10 @@
             </div>
         </div>
     </div>
+    {{ end }}
 
     <!-- JITsection -->
+    {{ if .Site.Params.P2.enabled }}
     <div class="overflow-hidden sm:pt-6 lg:relative">
         <div class="max-w-md px-4 mx-auto sm:max-w-3xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-2 lg:gap-12 lg:px-8">
             <div>
@@ -117,9 +113,10 @@
             </div>
         </div>
     </div>
-
+    {{ end }}
 
     <!-- Sponsors section -->
+    {{ if .Site.Params.P3.enabled }}
     <div class="max-w-md px-4 mx-auto md:pt-24 md:pb-16 sm:max-w-3xl sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="lg:grid lg:grid-cols-2 lg:items-center lg:gap-24">
             <div class="mt-12 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-0 lg:grid-cols-2">
@@ -154,8 +151,10 @@
             </div>
         </div>
     </div>
+    {{ end }}
 
     <!-- Blog section -->
+    {{ if .Site.Params.P4.enabled}}
     <div class="relative px-1 pt-8 pb-4 bg-transparent lg:px-8 lg:pt-12 lg:mb-4 md:mt-12">
         <div class="absolute inset-0">
             <div class="bg-gray-200 dark:bg-gray-900/50 h-1/3 sm:h-2/3"></div>
@@ -232,9 +231,10 @@
             </div>
         </div>
     </div>
+    {{ end }}
 
-    {{ if not .Site.Params.Disable_stay_uptodate}}
     <!-- CTA section -->
+    {{ if .Site.Params.P5.enabled}}
     <div class="relative pb-16 mt-6">
         <div class="max-w-md mx-auto px-7 sm:max-w-3xl lg:max-w-7xl">
             <div class="relative px-6 py-10 overflow-hidden shadow-xl bg-primary-500 rounded-2xl sm:px-12 sm:py-20">
